# Hypothetical-Machine-Assembler

./: .gitignore  README.md  TODO.txt
code/: CMakeLists.txt  build.sh
code/include/: assembler.h  preprocessor.h
code/lib/: assembler.cpp  preprocessor.cpp
code/src/: main.cpp
docs/test-codes/: bin.asm  fatorial.asm  triangulo.asm
